# Network-Connectivity

./: .gitignore  CMakeLists.txt  README.md
report/: main.tex
src/: Connectivity.cpp  Graph.cpp  Graph.h  Link.cpp  Link.h  Network-Connectivity.pro  NetworkIdGenerator.cpp  NetworkIdGenerator.h  Node.cpp  Node.h  Path.cpp  Path.h  ResidualGraph.cpp  ResidualGraph.h  Subnode.h  main.cpp
src/backend/: Connectivity.h  Link.h  Path.cpp  Subnode.h
src/frontend/: connectivitydialog.cpp  connectivitydialog.h  connectivitydialog.ui  distribuitiondialog.cpp  distribuitiondialog.h  distribuitiondialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: main.cpp  net2.net
